{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 461,
  "lineage": "c2013fc3-8638-cbff-f7ca-aee6262cb4df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5b481642590cd0d",
            "arn": "arn:aws:ec2:us-east-1:086936548333:elastic-ip/eipalloc-0f5b481642590cd0d",
            "domain": "vpc",
            "id": "eipalloc-0f5b481642590cd0d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-13-217-249-1.compute-1.amazonaws.com",
            "public_ip": "13.217.249.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:internet-gateway/igw-0d9bbeb5552509991",
            "id": "igw-0d9bbeb5552509991",
            "owner_id": "086936548333",
            "tags": {
              "Name": "YT-Internet Gateway"
            },
            "tags_all": {
              "Name": "YT-Internet Gateway"
            },
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:loadbalancer/app/yt-app-lb/c68a227e074309ec",
            "arn_suffix": "app/yt-app-lb/c68a227e074309ec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "yt-app-lb-837594314.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:086936548333:loadbalancer/app/yt-app-lb/c68a227e074309ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yt-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-094028d3f6a2506fd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023289f129aacdf0d"
              },
              {
                "subnet_id": "subnet-0f7963b3d9402ed2c"
              }
            ],
            "subnets": [
              "subnet-023289f129aacdf0d",
              "subnet-0f7963b3d9402ed2c"
            ],
            "vpc_id": "vpc-0eabfa3ac9b7e5991",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:loadbalancer/app/yt-app-lb2/8c9362e645ce4f5e",
            "arn_suffix": "app/yt-app-lb2/8c9362e645ce4f5e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-yt-app-lb2-832732815.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:086936548333:loadbalancer/app/yt-app-lb2/8c9362e645ce4f5e",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yt-app-lb2",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03127e8576cea9361"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04b17a98cbd66ef98"
              },
              {
                "subnet_id": "subnet-05922cd8627eb4a4e"
              }
            ],
            "subnets": [
              "subnet-04b17a98cbd66ef98",
              "subnet-05922cd8627eb4a4e"
            ],
            "vpc_id": "vpc-0eabfa3ac9b7e5991",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet2",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:listener/app/yt-app-lb/c68a227e074309ec/a6141455e9852f43",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:targetgroup/yt-web-server-tg/111bf700337c2d73",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086936548333:listener/app/yt-app-lb/c68a227e074309ec/a6141455e9852f43",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:loadbalancer/app/yt-app-lb/c68a227e074309ec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "yt-alb-listener"
            },
            "tags_all": {
              "Name": "yt-alb-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_lb.app_lb",
            "aws_lb_target_group.alb_ec2_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:listener/app/yt-app-lb2/8c9362e645ce4f5e/9cecdc7f5065154e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:targetgroup/yt-web-server-tg2/3204a710024cccb0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086936548333:listener/app/yt-app-lb2/8c9362e645ce4f5e/9cecdc7f5065154e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:loadbalancer/app/yt-app-lb2/8c9362e645ce4f5e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "yt-alb-listener2"
            },
            "tags_all": {
              "Name": "yt-alb-listener2"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_lb.app_lb_priv",
            "aws_lb_target_group.alb_ec2_tg_priv",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.private_subnet2",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_ec2_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:targetgroup/yt-web-server-tg/111bf700337c2d73",
            "arn_suffix": "targetgroup/yt-web-server-tg/111bf700337c2d73",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086936548333:targetgroup/yt-web-server-tg/111bf700337c2d73",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "yt-web-server-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "yt-alb_ec2_tg"
            },
            "tags_all": {
              "Name": "yt-alb_ec2_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_ec2_tg_priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:086936548333:targetgroup/yt-web-server-tg2/3204a710024cccb0",
            "arn_suffix": "targetgroup/yt-web-server-tg2/3204a710024cccb0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:086936548333:targetgroup/yt-web-server-tg2/3204a710024cccb0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "yt-web-server-tg2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "yt-alb_ec2_tg"
            },
            "tags_all": {
              "Name": "yt-alb_ec2_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "yt-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5b481642590cd0d",
            "association_id": "eipassoc-0630a9c90548c85fe",
            "connectivity_type": "public",
            "id": "nat-09c1f14b7ea8a86a5",
            "network_interface_id": "eni-06b38f4d571367ad8",
            "private_ip": "10.0.1.201",
            "public_ip": "13.217.249.1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-023289f129aacdf0d",
            "tags": {
              "Name": "YT-Nat Gateway"
            },
            "tags_all": {
              "Name": "YT-Nat Gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yt_route_table_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:route-table/rtb-08e25eb91e0d15bab",
            "id": "rtb-08e25eb91e0d15bab",
            "owner_id": "086936548333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09c1f14b7ea8a86a5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private subnet Route Table"
            },
            "tags_all": {
              "Name": "Private subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.yt-nat-gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yt_route_table_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:route-table/rtb-02b9b8f125481b2e3",
            "id": "rtb-02b9b8f125481b2e3",
            "owner_id": "086936548333",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d9bbeb5552509991",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public subnet Route Table"
            },
            "tags_all": {
              "Name": "Public subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083c38a627869df35",
            "route_table_id": "rtb-08e25eb91e0d15bab",
            "subnet_id": "subnet-04b17a98cbd66ef98"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.yt-nat-gateway",
            "aws_route_table.yt_route_table_private_subnet",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00604f134bc2a617d",
            "route_table_id": "rtb-08e25eb91e0d15bab",
            "subnet_id": "subnet-05922cd8627eb4a4e"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.yt-nat-gateway",
            "aws_route_table.yt_route_table_private_subnet",
            "aws_subnet.private_subnet2",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ab7bd91f8f32f04",
            "route_table_id": "rtb-08e25eb91e0d15bab",
            "subnet_id": "subnet-07f17d9a4992f8c02"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.yt-nat-gateway",
            "aws_route_table.yt_route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b8a93c76ed14ba6",
            "route_table_id": "rtb-08e25eb91e0d15bab",
            "subnet_id": "subnet-0ee4e80e842fe47ed"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_internet_gateway.igw_vpc",
            "aws_nat_gateway.yt-nat-gateway",
            "aws_route_table.yt_route_table_private_subnet",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e843c5b48bc2a673",
            "route_table_id": "rtb-02b9b8f125481b2e3",
            "subnet_id": "subnet-023289f129aacdf0d"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_route_table.yt_route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0daaef0494bf37dcd",
            "route_table_id": "rtb-02b9b8f125481b2e3",
            "subnet_id": "subnet-0f7963b3d9402ed2c"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc",
            "aws_route_table.yt_route_table_public_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:security-group/sg-094028d3f6a2506fd",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094028d3f6a2506fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "yt-alb-sg",
            "name_prefix": "",
            "owner_id": "086936548333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yt-alb-sg"
            },
            "tags_all": {
              "Name": "yt-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_priv_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:security-group/sg-01b674177a9125865",
            "description": "Security Group for Web Server Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b674177a9125865",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03127e8576cea9361"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "yt-ec2-sg2",
            "name_prefix": "",
            "owner_id": "086936548333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yt-ec2-sg2"
            },
            "tags_all": {
              "Name": "yt-ec2-sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:security-group/sg-03127e8576cea9361",
            "description": "Security Group for Web Server Instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03127e8576cea9361",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-094028d3f6a2506fd"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "yt-ec2-sg",
            "name_prefix": "",
            "owner_id": "086936548333",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yt-ec2-sg"
            },
            "tags_all": {
              "Name": "yt-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:subnet/subnet-07f17d9a4992f8c02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f17d9a4992f8c02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086936548333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Private subnet 1"
            },
            "tags_all": {
              "Name": "YT Private subnet 1"
            },
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:subnet/subnet-0ee4e80e842fe47ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee4e80e842fe47ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086936548333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Private subnet 2"
            },
            "tags_all": {
              "Name": "YT Private subnet 2"
            },
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:subnet/subnet-04b17a98cbd66ef98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b17a98cbd66ef98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086936548333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Private subnet2 1"
            },
            "tags_all": {
              "Name": "YT Private subnet2 1"
            },
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:subnet/subnet-05922cd8627eb4a4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05922cd8627eb4a4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086936548333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Private subnet2 2"
            },
            "tags_all": {
              "Name": "YT Private subnet2 2"
            },
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:subnet/subnet-023289f129aacdf0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023289f129aacdf0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086936548333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Public subnet 1"
            },
            "tags_all": {
              "Name": "YT Public subnet 1"
            },
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:subnet/subnet-0f7963b3d9402ed2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7963b3d9402ed2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "086936548333",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "YT Public subnet 2"
            },
            "tags_all": {
              "Name": "YT Public subnet 2"
            },
            "vpc_id": "vpc-0eabfa3ac9b7e5991"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:086936548333:vpc/vpc-0eabfa3ac9b7e5991",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018e1dd46ab3d92df",
            "default_route_table_id": "rtb-09991dc14a76cb9f3",
            "default_security_group_id": "sg-06cc34d80ef8085d1",
            "dhcp_options_id": "dopt-0a6137afe306e1bcb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eabfa3ac9b7e5991",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09991dc14a76cb9f3",
            "owner_id": "086936548333",
            "tags": {
              "Name": "yt-vpc"
            },
            "tags_all": {
              "Name": "yt-vpc"
            }
          }
        }
      ]
    }
  ]
}